Added basic threading example with class as function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ include(dependencies/get_cpm.cmake)
 include(dependencies/dependencies.cmake)
 
 add_subdirectory(hello_concurrency)
+add_subdirectory(basic_threads)
