--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ include(dependencies/dependencies.cmake)
 
 add_subdirectory(hello_concurrency)
 add_subdirectory(basic_threads)
+add_subdirectory(pipeline)
