Event loop is stuck right now - compile error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ include(dependencies/dependencies.cmake)
 add_subdirectory(hello_concurrency)
 add_subdirectory(basic_threads)
 add_subdirectory(pipeline)
+add_subdirectory(event_loop)
